pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError6.pkl
a = new Listing { "hi" }

b = (a) {
  "hihih"
}

bar = new Mapping {
  [b] = "foo"
}

res: Mapping<Listing<String(length == 5)>, String> = bar
